Add project files.

--- a/Cental.WebUI/Views/Shared/Components/_AdminLayoutSidebarComponent/Default.cshtml
+++ b/Cental.WebUI/Views/Shared/Components/_AdminLayoutSidebarComponent/Default.cshtml
@@ -29,7 +29,7 @@
                     <label>Menü</label>
                 </li>
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link "><span class="pcoded-micon"><i class="feather icon-home"></i></span><span class="pcoded-mtext">Dashboard</span></a>
+                    <a href="#" class="nav-link "><span class="pcoded-micon"><i class="feather icon-home"></i></span><span class="pcoded-mtext">Dashboard</span></a>
                 </li>
                 <li class="nav-item">
                     <a href="/AdminAbout/Index" class="nav-link "><span class="pcoded-micon"><i class="feather icon-home"></i></span><span class="pcoded-mtext">Hakkımızda</span></a>
@@ -39,6 +39,27 @@
                 </li>
                 <li class="nav-item">
                     <a href="/AdminBrand/Index" class="nav-link "><span class="pcoded-micon"><i class="feather icon-home"></i></span><span class="pcoded-mtext">Markalar</span></a>
+                </li>
+                <li class="nav-item">
+                    <a href="/Booking/Index" class="nav-link "><span class="pcoded-micon"><i class="feather icon-activity"></i></span><span class="pcoded-mtext">Araç Kiralama</span></a>
+                </li>
+                <li class="nav-item">
+                    <a href="/AdminCar/Index" class="nav-link "><span class="pcoded-micon"><i class="feather icon-octagon"></i></span><span class="pcoded-mtext">Araçlar</span></a>
+                </li>
+                <li class="nav-item">
+                    <a href="/AdminTestimonial/Index" class="nav-link "><span class="pcoded-micon"><i class="feather icon-octagon"></i></span><span class="pcoded-mtext">Referanslar</span></a>
+                </li>
+                <li class="nav-item">
+                    <a href="/AdminReview/Index" class="nav-link "><span class="pcoded-micon"><i class="feather icon-octagon"></i></span><span class="pcoded-mtext">Puanlamalar</span></a>
+                </li>
+                <li class="nav-item">
+                    <a href="/RoleAssign/Index" class="nav-link "><span class="pcoded-micon"><i class="feather icon-octagon"></i></span><span class="pcoded-mtext">Rol Ata</span></a>
+                </li>
+                <li class="nav-item">
+                    <a href="/Role/Index" class="nav-link "><span class="pcoded-micon"><i class="feather icon-octagon"></i></span><span class="pcoded-mtext">Roller</span></a>
+                </li>
+                <li class="nav-item">
+                    <a href="/AdminFeature/Index" class="nav-link "><span class="pcoded-micon"><i class="feather icon-octagon"></i></span><span class="pcoded-mtext">Özellikler</span></a>
                 </li>
             </ul>
 
