--- a/Cental.WebUI/Views/_ViewImports.cshtml
+++ b/Cental.WebUI/Views/_ViewImports.cshtml
@@ -9,6 +9,9 @@
 @using Cental.DtoLayer.MessageDtos
 @using PagedList.Core
 @using Cental.DtoLayer.BookingDtos
+@using Cental.DtoLayer.TestimonialDtos
+@using Cental.DtoLayer.ReviewDtos
+@using Cental.DtoLayer.FeatureDtos
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, PagedList.Core.Mvc
